# ballot-reader

./: .gitignore  converter.py  counter.py  main.ipynb  main.py  pyproject.toml  sample_metadata.yaml  stats.txt
metadata/: 1 Архангай.yaml  10 Өвөрхангай.yaml  11 Өмнөговь.yaml  12 Сүхбаатар.yaml  13 Сэлэнгэ.yaml  14 Төв.yaml  15 Увс.yaml  16 Ховд.yaml  17 Хөвсгөл.yaml  18 Хэнтий.yaml  19 Дархан-Уул.yaml  2 Баян-Өлгий.yaml  20 Орхон.yaml  21 Багануур.yaml  21 Налайх.yaml  22 Баянзүрх.yaml  23 Баянзүрх.yaml  24 Сүхбаатар дүүрэг.yaml  25 Чингэлтэй.yaml  26 Баянгол.yaml  27 Сонгинохайрхан.yaml  28 Сонгинохайрхан.yaml  29 Хан-Уул.yaml  3 Баянхонгор.yaml  4 Булган.yaml  5 Говь-Алтай.yaml  6 Говьсүмбэр.yaml  6 Дундговь.yaml  7 Дорнод.yaml  8 Дорноговь.yaml  9 Завхан.yaml
