[tool.poetry]
name = "election"
version = "0.1.0"
description = ""
authors = ["khasbilegt <khasbilegt.ts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
